tests/syntax/good/expr_cst5.c

void f(){

"ACBD\xaA\xbB";
}

