tests/syntax/bad/expr_cst5_fail.c

void f(){

"ACBD\xaA\xGB";
}


